--- a/moduleVideo/src/main/AndroidManifest.xml
+++ b/moduleVideo/src/main/AndroidManifest.xml
@@ -4,12 +4,20 @@
     package="com.apicloud.sdk.moduleVideo">
 
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true" >
 
 
-        <activity android:name="com.apicloud.moduleVideo.MainActivity" android:theme="@style/VideoTheme" android:screenOrientation="landscape"/>
+        <activity android:name="com.apicloud.moduleVideo.MainActivity"
+            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"
+            android:screenOrientation="landscape"
+             />
+        <activity android:name="com.apicloud.moduleVideo.LauncherTestActivity"
+            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"
+            />
     </application>
 
 </manifest>
